force-app/main/default/objects/Torc_User__c/Torc_User__c.object-meta.xml
<CustomObject>
    <label>Torc User</label>
    <nameField>
        <label>Torc User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Torc Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>