force-app/main/default/objects/Torc_User__c/fields/Agreed_To_Terms1__c.field-meta.xml
<CustomField>
    <fullName>Agreed_To_Terms1__c</fullName>
    <formula>IF(agreedToTerms__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreed To Terms?</label>
    <type>Text</type>
</CustomField>