force-app/main/default/objects/Torc_User__c/fields/agreedToMarketing__c.field-meta.xml
<CustomField>
    <fullName>agreedToMarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreed To Marketing</label>
    <type>Checkbox</type>
</CustomField>