force-app/main/default/objects/Torc_User__c/fields/agreedToTerms__c.field-meta.xml
<CustomField>
    <fullName>agreedToTerms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreed To Terms</label>
    <type>Checkbox</type>
</CustomField>