force-app/main/default/objects/Torc_User__c/fields/Assessment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessment Sent</label>
    <type>Checkbox</type>
</CustomField>