force-app/main/default/objects/Torc_User__c/fields/Assessment_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Sent_Date__c</fullName>
    <label>Assessment Sent Date</label>
    <type>DateTime</type>
</CustomField>