force-app/main/default/objects/Torc_User__c/fields/Assessment_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Submitted__c</fullName>
    <formula>If(No_of_Assessments_Submitted__c &gt; 0 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Submitted</label>
    <type>Checkbox</type>
</CustomField>