force-app/main/default/objects/Torc_User__c/fields/Assessments_Available__c.field-meta.xml
<CustomField>
    <fullName>Assessments_Available__c</fullName>
    <label>Assessments Available</label>
    <summaryFilterItems>
        <field>Torc_User_Skill__c.Assessment_Available__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Torc_User_Skill__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>