force-app/main/default/objects/Torc_User__c/fields/Auto_Set_Cover_Charges__c.field-meta.xml
<CustomField>
    <fullName>Auto_Set_Cover_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Set Cover Charges</label>
    <type>Checkbox</type>
</CustomField>