force-app/main/default/objects/Torc_User__c/fields/availability__c.field-meta.xml
<CustomField>
    <fullName>availability__c</fullName>
    <label>Availability</label>
    <length>50</length>
    <type>Text</type>
</CustomField>