force-app/main/default/objects/Torc_User__c/fields/Became_Match_Ready__c.field-meta.xml
<CustomField>
    <fullName>Became_Match_Ready__c</fullName>
    <formula>IF(
	 
AND(
NOT(ISBLANK(Full_Name__c)),
NOT(ISBLANK(countryName__c)),
NOT(ISBLANK(Email__c)),
NOT(ISBLANK(ratePerHour__c)),
NOT(ISBLANK(LinkedIn__c)),
Member_Skill_Count__c &gt; 2
),
now(),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Became Match Ready</label>
    <type>DateTime</type>
</CustomField>