force-app/main/default/objects/Torc_User__c/fields/BH_Id_Same__c.field-meta.xml
<CustomField>
    <fullName>BH_Id_Same__c</fullName>
    <formula>externalUserId__c =  RD1_Legacy_BH_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BH Id Same?</label>
    <type>Checkbox</type>
</CustomField>