force-app/main/default/objects/Torc_User__c/fields/bio__c.field-meta.xml
<CustomField>
    <fullName>bio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bio</label>
    <type>Checkbox</type>
</CustomField>