force-app/main/default/objects/Torc_User__c/fields/cityName__c.field-meta.xml
<CustomField>
    <fullName>cityName__c</fullName>
    <label>City Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>