force-app/main/default/objects/Torc_User__c/fields/CognitoGroups__c.field-meta.xml
<CustomField>
    <fullName>CognitoGroups__c</fullName>
    <label>CognitoGroups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>customers</fullName>
            </value>
            <value>
                <fullName>JobAssistantEnabled</fullName>
            </value>
            <value>
                <fullName>JobEnabled</fullName>
            </value>
            <value>
                <fullName>JobManagers</fullName>
            </value>
            <value>
                <fullName>PaymentEnabled</fullName>
            </value>
            <value>
                <fullName>PremiumCustomers</fullName>
            </value>
            <value>
                <fullName>ProfessionalCommunity</fullName>
            </value>
            <value>
                <fullName>RDImportClaimed</fullName>
            </value>
            <value>
                <fullName>UserManagers</fullName>
            </value>
            <value>
                <fullName>us-east-1_wmMYxA1kJ_Google</fullName>
            </value>
            <value>
                <fullName>RDIndia</fullName>
            </value>
            <value>
                <fullName>us-east-1_wmMYxA1kJ_Github</fullName>
            </value>
            <value>
                <fullName>RDImport</fullName>
            </value>
            <value>
                <fullName>RDIndiaImport</fullName>
            </value>
            <value>
                <fullName>RDIndiaImportClaimed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>