force-app/main/default/objects/Torc_User__c/fields/CognitoGroupsText__c.field-meta.xml
<CustomField>
    <fullName>CognitoGroupsText__c</fullName>
    <label>CognitoGroupsText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>