force-app/main/default/objects/Torc_User__c/fields/company__c.field-meta.xml
<CustomField>
    <fullName>company__c</fullName>
    <label>Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>