force-app/main/default/objects/Torc_User__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Torc_Country__c</referenceTo>
    <relationshipLabel>Torc Users</relationshipLabel>
    <relationshipName>Torc_Users</relationshipName>
    <type>Lookup</type>
</CustomField>