force-app/main/default/objects/Torc_User__c/fields/countryCode__c.field-meta.xml
<CustomField>
    <fullName>countryCode__c</fullName>
    <label>Country Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>