force-app/main/default/objects/Torc_User__c/fields/countryName__c.field-meta.xml
<CustomField>
    <fullName>countryName__c</fullName>
    <label>Country Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>