force-app/main/default/objects/Torc_User__c/fields/coverPhoto__c.field-meta.xml
<CustomField>
    <fullName>coverPhoto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>coverPhoto</label>
    <type>Checkbox</type>
</CustomField>