force-app/main/default/objects/Torc_User__c/fields/creator__c.field-meta.xml
<CustomField>
    <fullName>creator__c</fullName>
    <label>creator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>