force-app/main/default/objects/Torc_User__c/fields/Days_before_Placement__c.field-meta.xml
<CustomField>
    <fullName>Days_before_Placement__c</fullName>
    <formula>IF(Min_Placement_Date__c = NULL, TODAY()-DATEVALUE(createdAt__c),Min_Placement_Date__c-DATEVALUE(createdAt__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days before Placement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>