force-app/main/default/objects/Torc_User__c/fields/Do_Not_Disturb__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Disturb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Disturb</label>
    <type>Checkbox</type>
</CustomField>