force-app/main/default/objects/Torc_User__c/fields/Email_Same_With_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Email_Same_With_Candidate__c</fullName>
    <formula>Email__c = RD1_Candidate_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Same With Candidate</label>
    <type>Checkbox</type>
</CustomField>