force-app/main/default/objects/Torc_User__c/fields/Exclude_From_Awards__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Awards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Awards</label>
    <type>Checkbox</type>
</CustomField>