force-app/main/default/objects/Torc_User__c/fields/Exclude_Referral_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Referral_Bonus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Torc?</label>
    <type>Checkbox</type>
</CustomField>