force-app/main/default/objects/Torc_User__c/fields/Exclude_Referrer_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Referrer_Bonus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Referrer Bonus</label>
    <type>Checkbox</type>
</CustomField>