force-app/main/default/objects/Torc_User__c/fields/externalUserId__c.field-meta.xml
<CustomField>
    <fullName>externalUserId__c</fullName>
    <label>externalUserId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>