force-app/main/default/objects/Torc_User__c/fields/family_Name__c.field-meta.xml
<CustomField>
    <fullName>family_Name__c</fullName>
    <label>Family Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>