force-app/main/default/objects/Torc_User__c/fields/Filled_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Filled_Questionnaire__c</fullName>
    <formula>Latest_Freelancer_Questionnaire__c &lt;&gt;NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filled Questionnaire?</label>
    <type>Checkbox</type>
</CustomField>