force-app/main/default/objects/Torc_User__c/fields/First_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>First_Working_Day__c</fullName>
    <label>First Working Day</label>
    <summarizedField>Placement__c.First_Working_Day__c</summarizedField>
    <summaryForeignKey>Placement__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>