force-app/main/default/objects/Torc_User__c/fields/Freelancer_IC_Status__c.field-meta.xml
<CustomField>
    <fullName>Freelancer_IC_Status__c</fullName>
    <formula>TEXT(Latest_Freelancer_Questionnaire__r.Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freelancer IC Status</label>
    <type>Text</type>
</CustomField>