force-app/main/default/objects/Torc_User__c/fields/given_name__c.field-meta.xml
<CustomField>
    <fullName>given_name__c</fullName>
    <label>Given Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>