force-app/main/default/objects/Torc_User__c/fields/Have_Nylas_Account__c.field-meta.xml
<CustomField>
    <fullName>Have_Nylas_Account__c</fullName>
    <formula>AND(nylasAccountId__c &lt;&gt; &apos;&apos; , nylasAccountId__c &lt;&gt; NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Have Nylas Account</label>
    <type>Checkbox</type>
</CustomField>