force-app/main/default/objects/Torc_User__c/fields/headshotKey__c.field-meta.xml
<CustomField>
    <fullName>headshotKey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>headshotKey</label>
    <type>Checkbox</type>
</CustomField>