force-app/main/default/objects/Torc_User__c/fields/IC_Ready__c.field-meta.xml
<CustomField>
    <fullName>IC_Ready__c</fullName>
    <formula>IsPICKVAL(Latest_Freelancer_Questionnaire__r.Approval_Status__c , &apos;Approved&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IC Ready</label>
    <type>Checkbox</type>
</CustomField>