force-app/main/default/objects/Torc_User__c/fields/identity_username__c.field-meta.xml
<CustomField>
    <fullName>identity_username__c</fullName>
    <externalId>true</externalId>
    <label>Identity Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>