force-app/main/default/objects/Torc_User__c/fields/InitialCognitoGroups__c.field-meta.xml
<CustomField>
    <fullName>InitialCognitoGroups__c</fullName>
    <label>InitialCognitoGroups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>customers</fullName>
            </value>
            <value>
                <fullName>JobAssistantEnabled</fullName>
            </value>
            <value>
                <fullName>JobEnabled</fullName>
            </value>
            <value>
                <fullName>JobManagers</fullName>
            </value>
            <value>
                <fullName>PaymentEnabled</fullName>
            </value>
            <value>
                <fullName>PremiumCustomers</fullName>
            </value>
            <value>
                <fullName>ProfessionalCommunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>