force-app/main/default/objects/Torc_User__c/fields/Is_Randstad__c.field-meta.xml
<CustomField>
    <fullName>Is_Randstad__c</fullName>
    <formula>Randstad_Category__c &lt;&gt;&apos;TORC&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Randstad?</label>
    <type>Checkbox</type>
</CustomField>