force-app/main/default/objects/Torc_User__c/fields/Is_RD_Ingested1__c.field-meta.xml
<CustomField>
    <fullName>Is_RD_Ingested1__c</fullName>
    <formula>IF(Is_RD_Ingested__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is RD Ingested?</label>
    <type>Text</type>
</CustomField>