force-app/main/default/objects/Torc_User__c/fields/Is_RD_Ingested__c.field-meta.xml
<CustomField>
    <fullName>Is_RD_Ingested__c</fullName>
    <formula>RD_Ingestion_Status__c &lt;&gt;&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is RD Ingested?</label>
    <type>Checkbox</type>
</CustomField>