force-app/main/default/objects/Torc_User__c/fields/Is_referred__c.field-meta.xml
<CustomField>
    <fullName>Is_referred__c</fullName>
    <formula>AND( referrerCode__c &lt;&gt;NULL , referrerCode__c&lt;&gt;&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is referred?</label>
    <type>Checkbox</type>
</CustomField>