force-app/main/default/objects/Torc_User__c/fields/Job_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Job_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Enabled</label>
    <type>Checkbox</type>
</CustomField>