force-app/main/default/objects/Torc_User__c/fields/Last_Codealike_Use__c.field-meta.xml
<CustomField>
    <fullName>Last_Codealike_Use__c</fullName>
    <label>Last Codealike Use</label>
    <type>DateTime</type>
</CustomField>