force-app/main/default/objects/Torc_User__c/fields/lastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>lastActivityDate__c</fullName>
    <label>lastActivityDate</label>
    <type>DateTime</type>
</CustomField>