force-app/main/default/objects/Torc_User__c/fields/Latest_Accepted_Job__c.field-meta.xml
<CustomField>
    <fullName>Latest_Accepted_Job__c</fullName>
    <formula>Latest_Accepted_Match__r.Torc_Job_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Accepted Job</label>
    <type>Text</type>
</CustomField>