force-app/main/default/objects/Torc_User__c/fields/Latest_Accepted_Match__c.field-meta.xml
<CustomField>
    <fullName>Latest_Accepted_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Accepted Match</label>
    <referenceTo>Torc_Match__c</referenceTo>
    <relationshipLabel>Torc Users</relationshipLabel>
    <relationshipName>Torc_Users</relationshipName>
    <type>Lookup</type>
</CustomField>