force-app/main/default/objects/Torc_User__c/fields/Latest_City__c.field-meta.xml
<CustomField>
    <fullName>Latest_City__c</fullName>
    <label>Latest City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>