force-app/main/default/objects/Torc_User__c/fields/Latest_Country_ISO__c.field-meta.xml
<CustomField>
    <fullName>Latest_Country_ISO__c</fullName>
    <label>Latest Country ISO</label>
    <length>4</length>
    <type>Text</type>
</CustomField>