force-app/main/default/objects/Torc_User__c/fields/Latest_Freelancer_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Latest_Freelancer_Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Freelancer Questionnaire</label>
    <referenceTo>Freelancer_Questionnaire__c</referenceTo>
    <relationshipLabel>Torc Users</relationshipLabel>
    <relationshipName>Torc_Users</relationshipName>
    <type>Lookup</type>
</CustomField>