force-app/main/default/objects/Torc_User__c/fields/Latest_Match_EOR_Or_IC__c.field-meta.xml
<CustomField>
    <fullName>Latest_Match_EOR_Or_IC__c</fullName>
    <formula>Latest_Accepted_Match__r.EOR_OR_IC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Match EOR Or IC?</label>
    <type>Text</type>
</CustomField>