force-app/main/default/objects/Torc_User__c/fields/Latest_Phone__c.field-meta.xml
<CustomField>
    <fullName>Latest_Phone__c</fullName>
    <label>Latest Phone</label>
    <type>Phone</type>
</CustomField>