force-app/main/default/objects/Torc_User__c/fields/Latest_State_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_State_Name__c</fullName>
    <label>Latest State Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>