force-app/main/default/objects/Torc_User__c/fields/Latest_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Latest_Street_1__c</fullName>
    <label>Latest Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>