force-app/main/default/objects/Torc_User__c/fields/Latest_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Latest_Zip_Code__c</fullName>
    <label>Latest Zip Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>