force-app/main/default/objects/Torc_User__c/fields/Linkedin_Txt__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Txt__c</fullName>
    <formula>LinkedIn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linkedin Txt?</label>
    <type>Text</type>
</CustomField>