force-app/main/default/objects/Torc_User__c/fields/Match_Ready__c.field-meta.xml
<CustomField>
    <fullName>Match_Ready__c</fullName>
    <formula>OR(
AND(
NOT(ISBLANK(Full_Name__c)),
NOT(ISBLANK(countryName__c)),
NOT(ISBLANK(Email__c)),
NOT(ISBLANK(ratePerHour__c)),
NOT(ISBLANK(LinkedIn__c)),
Member_Skill_Count__c &gt; 2
),
INCLUDES( CognitoGroups__c , &apos;RDImportClaimed&apos;),
INCLUDES( CognitoGroups__c , &apos;RDIndiaImportClaimed&apos;),
INCLUDES( CognitoGroups__c , &apos;RDImport&apos;),
INCLUDES( CognitoGroups__c , &apos;RDIndiaImport&apos;),

AND(
INCLUDES( CognitoGroups__c , &apos;BullhornIntegration&apos;),
NOT(isBlank(resumeLocation__c))
)
)</formula>
    <label>Match Ready?</label>
    <type>Checkbox</type>
</CustomField>