force-app/main/default/objects/Torc_User__c/fields/Max_Placement_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Placement_Date__c</fullName>
    <label>Max Placement Date</label>
    <summarizedField>Placement__c.Last_Working_Day__c</summarizedField>
    <summaryFilterItems>
        <field>Placement__c.IPC__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Placement__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>