force-app/main/default/objects/Torc_User__c/fields/Max_Score_in_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Max_Score_in_Assessment__c</fullName>
    <label>Max Score in Assessment</label>
    <summarizedField>Torc_Assessment__c.finalScore__c</summarizedField>
    <summaryForeignKey>Torc_Assessment__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>