force-app/main/default/objects/Torc_User__c/fields/Meaningful_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Meaningful_Update_Date__c</fullName>
    <label>Meaningful Update Date</label>
    <type>Date</type>
</CustomField>