force-app/main/default/objects/Torc_User__c/fields/Member_Skill_Count__c.field-meta.xml
<CustomField>
    <fullName>Member_Skill_Count__c</fullName>
    <label>Member Skill Count</label>
    <summaryForeignKey>Torc_User_Skill__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>