force-app/main/default/objects/Torc_User__c/fields/Member_Testimonial__c.field-meta.xml
<CustomField>
    <fullName>Member_Testimonial__c</fullName>
    <label>Member Testimonial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>