force-app/main/default/objects/Torc_User__c/fields/Min_Placement_Date__c.field-meta.xml
<CustomField>
    <fullName>Min_Placement_Date__c</fullName>
    <label>Min Placement Date</label>
    <summarizedField>Placement__c.First_Working_Day__c</summarizedField>
    <summaryFilterItems>
        <field>Placement__c.IPC__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Placement__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>