force-app/main/default/objects/Torc_User__c/fields/nextAvailableDate__c.field-meta.xml
<CustomField>
    <fullName>nextAvailableDate__c</fullName>
    <label>nextAvailableDate</label>
    <type>Date</type>
</CustomField>