force-app/main/default/objects/Torc_User__c/fields/No_of_Assessments_Submitted__c.field-meta.xml
<CustomField>
    <fullName>No_of_Assessments_Submitted__c</fullName>
    <label>No. of Assessments Submitted</label>
    <summaryFilterItems>
        <field>Torc_Assessment__c.status__c</field>
        <operation>equals</operation>
        <value>Shortlisted, In progress, Submitted, Completed, Time Expired, Test Left, Time expired, COMPLETE, done, PASSED</value>
    </summaryFilterItems>
    <summaryForeignKey>Torc_Assessment__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>