force-app/main/default/objects/Torc_User__c/fields/No_tech_skill__c.field-meta.xml
<CustomField>
    <fullName>No_tech_skill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No tech skill</label>
    <type>Checkbox</type>
</CustomField>