force-app/main/default/objects/Torc_User__c/fields/noticePeriod__c.field-meta.xml
<CustomField>
    <fullName>noticePeriod__c</fullName>
    <label>noticePeriod</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>