force-app/main/default/objects/Torc_User__c/fields/nylasAccountId__c.field-meta.xml
<CustomField>
    <fullName>nylasAccountId__c</fullName>
    <label>nylasAccountId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>