force-app/main/default/objects/Torc_User__c/fields/overallExperience__c.field-meta.xml
<CustomField>
    <fullName>overallExperience__c</fullName>
    <label>overallExperience</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>