force-app/main/default/objects/Torc_User__c/fields/Payment_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Payment_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Enabled</label>
    <type>Checkbox</type>
</CustomField>