force-app/main/default/objects/Torc_User__c/fields/Placement_Count__c.field-meta.xml
<CustomField>
    <fullName>Placement_Count__c</fullName>
    <label>Placement Count</label>
    <summaryFilterItems>
        <field>Placement__c.Exclude__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Placement__c.Torc_User__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>