force-app/main/default/objects/Torc_User__c/fields/Profile_70__c.field-meta.xml
<CustomField>
    <fullName>Profile_70__c</fullName>
    <formula>IF(profileCompletion__c &gt;= 0.70, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile &gt; 70%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>