force-app/main/default/objects/Torc_User__c/fields/Profile_Completion__c.field-meta.xml
<CustomField>
    <fullName>Profile_Completion__c</fullName>
    <formula>IF(ISNULL(profileCompletion__c ),0,profileCompletion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>