force-app/main/default/objects/Torc_User__c/fields/Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_URL__c</fullName>
    <formula>IF( userName__c &lt;&gt;NULL,
HYPERLINK(&apos;https://platform.opentorc.com/#/profile/&apos;+userName__c, userName__c) ,
&apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile URL</label>
    <type>Text</type>
</CustomField>