force-app/main/default/objects/Torc_User__c/fields/profileCompletion__c.field-meta.xml
<CustomField>
    <fullName>profileCompletion__c</fullName>
    <label>ProfileCompletion</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>