force-app/main/default/objects/Torc_User__c/fields/Quick_Books_vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>Quick_Books_vendor_Id__c</fullName>
    <label>Quick Books vendor Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>