force-app/main/default/objects/Torc_User__c/fields/Quickbooks_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Quickbooks_Vendor__c</fullName>
    <label>Quickbooks Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>