force-app/main/default/objects/Torc_User__c/fields/ratePerHour__c.field-meta.xml
<CustomField>
    <fullName>ratePerHour__c</fullName>
    <label>Rate Per Hour</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>