force-app/main/default/objects/Torc_User__c/fields/RD1_Candidate__c.field-meta.xml
<CustomField>
    <fullName>RD1_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RD1 Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Torc Users (RD1 Candidate)</relationshipLabel>
    <relationshipName>Torc_Users1</relationshipName>
    <type>Lookup</type>
</CustomField>