force-app/main/default/objects/Torc_User__c/fields/RD1_Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>RD1_Candidate_Email__c</fullName>
    <formula>RD1_Candidate__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RD1 Candidate Email</label>
    <type>Text</type>
</CustomField>