force-app/main/default/objects/Torc_User__c/fields/RD1_Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>RD1_Contact_Record_Type__c</fullName>
    <formula>RD1_Candidate__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RD1 Contact Record Type</label>
    <type>Text</type>
</CustomField>