force-app/main/default/objects/Torc_User__c/fields/RD1_Legacy_BH_Id__c.field-meta.xml
<CustomField>
    <fullName>RD1_Legacy_BH_Id__c</fullName>
    <formula>RD1_Candidate__r.Legacy_BH_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RD1 Legacy BH Id</label>
    <type>Text</type>
</CustomField>