force-app/main/default/objects/Torc_User__c/fields/RD_Ingestion_Status__c.field-meta.xml
<CustomField>
    <fullName>RD_Ingestion_Status__c</fullName>
    <formula>IF( INCLUDES( CognitoGroups__c , &apos;RDImportClaimed&apos;), &apos;RDImportClaimed&apos;,
IF( INCLUDES( CognitoGroups__c , &apos;RDIndiaImportClaimed&apos;), &apos;RDIndiaImportClaimed&apos;,
IF( INCLUDES( CognitoGroups__c , &apos;RDImport&apos;), &apos;RDImport&apos;,
IF( INCLUDES( CognitoGroups__c , &apos;RDIndiaImport&apos;), &apos;RDIndiaImport&apos;,
IF( INCLUDES( CognitoGroups__c , &apos;BullhornIntegration&apos;), &apos;BullhornIntegration&apos;,&apos;&apos;)
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RD Ingestion Status</label>
    <type>Text</type>
</CustomField>