force-app/main/default/objects/Torc_User__c/fields/Recruiter_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Cohort__c</fullName>
    <label>Recruiter Cohort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US Cohort 1</fullName>
            </value>
            <value>
                <fullName>US Cohort 2</fullName>
            </value>
            <value>
                <fullName>US Cohort 3</fullName>
            </value>
            <value>
                <fullName>US Cohort 4</fullName>
            </value>
            <value>
                <fullName>US Cohort 5</fullName>
            </value>
            <value>
                <fullName>US Cohort 6</fullName>
            </value>
            <value>
                <fullName>India Cohort 1</fullName>
            </value>
            <value>
                <fullName>India Cohort 2</fullName>
            </value>
            <value>
                <fullName>India Cohort 3</fullName>
            </value>
            <value>
                <fullName>India Cohort 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>