force-app/main/default/objects/Torc_User__c/fields/referralCode__c.field-meta.xml
<CustomField>
    <fullName>referralCode__c</fullName>
    <label>Referral Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>